--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -6,11 +6,10 @@ task:
   name: "Kernel deploy.."
   timeout_in: 2h
   container:
-      image: panchajanya1999/archlinux:latest
+      image: zenitsuxd/docker:latest
       cpu: 8
       memory: 32G
 
   Build_script:
-      - git clone --depth=1 -b 4.19-rebase https://github.com/projects-nexus/android_kernel_lavender-4.19 lv && cd lv
+      - git clone --depth=1 -b oldcam-hmp https://github.com/ZenitsuID/kernel_xiaomi_lavender lv && cd lv
       - bash build.sh --azure
-
