--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -10,7 +10,7 @@ task:
       cpu: 8
       memory: 32G
 
-  Build_script:
+  Build_Kernel_script:
       - git clone --depth=1 -b oldcam-hmp https://github.com/ZenitsuID/kernel_xiaomi_lavender lv && cd lv
-      - bash build.sh --azure
+      - bash build.sh --proton
 
